src/styles/subsocial.scss
/* ... */
.ant-affix {
  .DfFilters {
    @extend .DfFiltersCommon;
    opacity: 0;
    padding: $space_small 22px $space_small 22px;
  }
  &:hover {
    .DfFilters {
      animation: ShowDateFilter 0.4s forwards;
    }
  }
}

.DfBurgerIcon {
  color: $color_muted;
}

@media (max-width: 755px) {
  .ant-affix {
    .DfFilters {
      @extend .DfFiltersCommon;
      padding: $space_small 14px $space_small 14px;
      opacity: 100;
      position: relative;
    }
    &:hover {
      .DfFilters {
        animation: none;
      }
    }
  }
}

@keyframes ShowDateFilter {
  0% {
    opacity: 0;
  }
  50% {
    opacity: 50;
  }
  100% {
    opacity: 100;
  }
}

.FollowerCanPostAlert {
  margin-bottom: $space_normal;
}

.DfToolbar {
  padding: $space_mini;
  padding-left: 0;
  align-items: center;
  button {
    margin-right: $space_mini !important;
  }
}

.ProseMirror {
  padding: 0 $space_mini;
  font-size: $font_normal;
  overflow: auto;
  margin-top: $space_mini;
}

.scrollbar::-webkit-scrollbar {
  background-color: transparent;
  width: 0.375rem;
  height: 0.375rem;
}

.scrollbar::-webkit-scrollbar-thumb {
  background-color: rgba(100, 116, 139, 0.16);
  border-radius: 0.25rem;
}

.ant-form-item-explain {
  margin-top: 4px;
}

@media screen and (min-width: 769px) {
  .lg-hidden {
    display: none !important;
  }
}

@media screen and (max-width: 768px) {
  .sm-hidden {
    display: none !important;
  }
}

.\!FontTiny {
  font-size: $font_tiny !important;
}
.\!FontSmall {
  font-size: $font_small !important;
}
.\!FontWeightNormal {
  font-weight: $font_weight_normal !important;
}
.\!ColorMuted {
  color: $color_muted !important;
}

.\!BreakWord {
  word-break: break-word !important;
}

